# gm-crypto-rs

./: .gitignore  .gitleaks.toml  .mailmap  CASE-STUDY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: api-stability.yml  ci.yml  dudect-nightly.yml  dudect-pr.yml  fuzz-build.yml  fuzz-nightly.yml
benches/: timing_leaks.rs
crates/gmcrypto-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/gmcrypto-c/examples/: sm2_key_exchange.c  sm2_sign.c  sm4_gcm_streaming.c  sm4_xts_multisector.c  sm4_xts_sector.c  tlcp_handshake.c  tlcp_verify_pair.c  x509_verify.c
crates/gmcrypto-c/include/: gmcrypto.h
crates/gmcrypto-c/src/: lib.rs
crates/gmcrypto-c/tests/: c_smoke.rs
crates/gmcrypto-core/: Cargo.toml
crates/gmcrypto-core/benches/: timing_leaks.rs
crates/gmcrypto-core/src/: hmac.rs  kdf.rs  lib.rs  pem.rs  pkcs8.rs  sec1.rs  sm3.rs  spki.rs  traits.rs  x509.rs
crates/gmcrypto-core/src/asn1/: ciphertext.rs  mod.rs  oid.rs  reader.rs  sig.rs  writer.rs
crates/gmcrypto-core/src/sm2/: comb_table.rs  curve.rs  decrypt.rs  encrypt.rs  key_exchange.rs  mod.rs  point.rs  private_key.rs  public_key.rs  raw_ciphertext.rs  scalar_mul.rs  sign.rs  verify.rs
crates/gmcrypto-core/src/sm4/: cbc_streaming.rs  cipher.rs  ctr_streaming.rs  gcm_streaming.rs  mod.rs  mode_cbc.rs  mode_ccm.rs  mode_ctr.rs  mode_gcm.rs  mode_xts.rs  sbox_bitsliced.rs  sbox_bitsliced_simd.rs
crates/gmcrypto-core/src/tlcp/: chain.rs  key_schedule.rs  mod.rs  record.rs
crates/gmcrypto-core/tests/: api_surface.rs  interop_gmssl.rs  rustcrypto_traits.rs  sm2_kx_kat.rs  sm4_batch_api.rs  sm4_ccm_kat.rs  sm4_ctr_kat.rs  sm4_gcm_kat.rs  sm4_xts_kat.rs  sm4_xts_sectors.rs  tlcp_chain_kat.rs  tlcp_key_schedule_kat.rs  tlcp_record_kat.rs  v0_3_pkcs8_kat.rs  x509_chain_kat.rs  x509_kat.rs
crates/gmcrypto-core/tests/data/: README.md  sm4_ccm_oracle.c  sm4_xts_oracle.c  tlcp_record_kat_gen.py  v0_3-sm2-pkcs8-encrypted.pem  v0_3-sm2-spki.pem  x509_ca_pub.der  x509_chain_enc.der  x509_chain_int.der  x509_chain_root.der  x509_chain_sign.der  x509_leaf_pub.der  x509_regen.md
crates/gmcrypto-simd/: Cargo.toml
crates/gmcrypto-simd/src/: detect.rs  lib.rs
crates/gmcrypto-simd/src/ghash/: clmul.rs  mod.rs  pmull.rs  software.rs
crates/gmcrypto-simd/src/sm4/: avx2.rs  mod.rs  neon.rs  sbox_x16.rs  sbox_x32.rs  sbox_x8.rs  scalar.rs
crates/gmcrypto-simd/tests/: ghash_kat.rs  ghash_lane_equivalence.rs  internal_surface.rs  lane_equivalence.rs  lane_position_x16.rs  lane_position_x32.rs
docs/: README.md  pre-opensource-audit.md  tlcp-decomposition.md  v0.1.0-release-review.md  v0.10-scope.md  v0.11-scope.md  v0.12-scope.md  v0.12-xts-kat-sourcing.md  v0.13-scope.md  v0.14-scope.md  v0.15-scope.md  v0.16-scope.md  v0.17-scope.md  v0.18-scope.md  v0.19-scope.md  v0.2.0-release-review.md  v0.20-scope.md  v0.21-scope.md  v0.22-scope.md  v0.23-scope.md  v0.3-scope.md  v0.4-scope.md  v0.5-dudect-recalibration.md  v0.5-scope.md  v0.6-scope.md  v0.7-aead-scope.md  v0.8-ccm-kat-sourcing.md  v0.9-scope.md  v1.0-readiness.md  v1.0-reaudit.md  v1.0.0-release-review.md  v1.1-scope.md  v1.1-sm2-key-exchange-design.md  v1.1-sm2-key-exchange-plan.md  v1.1-sm2kx-kat-sourcing.md  v1.2-scope.md  v1.3-scope.md  v1.3-x509-sm2-design.md  v1.3-x509-sm2-plan.md  v1.4-scope.md  (+13 more)
docs/api-baseline/: gmcrypto-core.txt  gmcrypto-simd.txt
docs/audits/: 2026-06-02-api-abi-stability-audit.md  2026-06-02-ci-gate-review.md  2026-06-02-ct-discipline-audit.md  2026-06-02-dependency-policy-audit.md  2026-06-02-docs-vs-code-ci-consistency.md  2026-06-02-fuzz-coverage-gaps.md  2026-06-02-misuse-footgun-audit.md  2026-06-02-release-readiness-synthesis.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_asn1_reader.rs  fuzz_c_abi.rs  fuzz_hmac_sm3.rs  fuzz_pem.rs  fuzz_pkcs8_decode.rs  fuzz_pkcs8_decrypt.rs  fuzz_sec1.rs  fuzz_sig.rs  fuzz_sm2_ciphertext_der.rs  fuzz_sm2_decrypt.rs  fuzz_sm2_kx.rs  fuzz_sm2_pubkey_sec1.rs  fuzz_sm2_raw_ciphertext.rs  fuzz_sm2_verify.rs  fuzz_sm3.rs  fuzz_sm4_cbc_decrypt.rs  fuzz_sm4_cbc_encrypt.rs  fuzz_sm4_cbc_streaming_decrypt.rs  fuzz_sm4_ccm_decrypt.rs  fuzz_sm4_ccm_encrypt.rs  fuzz_sm4_gcm_decrypt.rs  fuzz_sm4_gcm_encrypt.rs  fuzz_sm4_gcm_streaming_decrypt.rs  fuzz_sm4_xts_decrypt.rs  fuzz_sm4_xts_encrypt.rs  fuzz_spki.rs  fuzz_tlcp_cbc_deprotect.rs  fuzz_tlcp_gcm_deprotect.rs  fuzz_x509.rs  fuzz_x509_chain.rs
fuzz/seeds/fuzz_asn1_reader/: spki.der
fuzz/seeds/fuzz_c_abi/: kx_valid_transcript  sm3_abc  tlcp_verify_chain_op  x509_leaf_op
fuzz/seeds/fuzz_hmac_sm3/: basic
fuzz/seeds/fuzz_pkcs8_decode/: valid.der
fuzz/seeds/fuzz_pkcs8_decrypt/: valid.der
fuzz/seeds/fuzz_sec1/: valid.der
fuzz/seeds/fuzz_sm2_ciphertext_der/: valid.der
fuzz/seeds/fuzz_sm2_decrypt/: valid.der
fuzz/seeds/fuzz_sm2_kx/: basic
fuzz/seeds/fuzz_sm2_pubkey_sec1/: valid.sec1
fuzz/seeds/fuzz_sm2_verify/: valid_sig.der
fuzz/seeds/fuzz_sm4_cbc_encrypt/: basic
fuzz/seeds/fuzz_sm4_cbc_streaming_decrypt/: valid_0  valid_1  valid_2  valid_3
fuzz/seeds/fuzz_sm4_ccm_encrypt/: basic
fuzz/seeds/fuzz_sm4_gcm_encrypt/: basic
fuzz/seeds/fuzz_sm4_gcm_streaming_decrypt/: valid_0  valid_1  valid_2  valid_3
fuzz/seeds/fuzz_sm4_xts_encrypt/: basic
fuzz/seeds/fuzz_x509/: ca  leaf
