[workspace]
resolver = "2"
members = ["crates/gmcrypto-core"]
default-members = ["crates/gmcrypto-core"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/frankxue831/gm-crypto-rs"
rust-version = "1.85"

[workspace.dependencies]
crypto-bigint = { version = "0.7.3", default-features = false, features = ["subtle", "zeroize"] }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["derive"] }
rand_core = { version = "0.10.1", default-features = false }
getrandom = { version = "0.4.2", default-features = false, features = ["sys_rng"] }

# dev-only — exempt from cargo-deny ban list
dudect-bencher = "0.7.0"
hex-literal = "1.1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
