[workspace]
resolver = "2"
# v0.4 W4 — `gmcrypto-c` is the C ABI shim (cdylib + staticlib +
# cbindgen header). Per Q4.15 in docs/v0.4-scope.md, it is a
# workspace member but NOT in `default-members` — most contributors
# work on `gmcrypto-core`, so building the cdylib on every workspace
# `cargo build` would be surprising. CI explicitly `-p gmcrypto-c`
# for the FFI build / header-drift jobs.
#
# v0.5 W4 phase 2 — `gmcrypto-simd` is the SIMD backend crate (AVX2
# now, NEON in phase 3). Mirrors the `gmcrypto-c` posture: workspace
# member but NOT in default-members. The crate is opt-in via the
# `sm4-bitsliced-simd` feature on `gmcrypto-core`; default workspace
# builds never compile it.
members = ["crates/gmcrypto-core", "crates/gmcrypto-c", "crates/gmcrypto-simd"]
default-members = ["crates/gmcrypto-core"]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/frankxue831/gm-crypto-rs"
rust-version = "1.85"

[workspace.dependencies]
crypto-bigint = { version = "0.7.3", default-features = false, features = ["subtle", "zeroize"] }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["derive"] }
rand_core = { version = "0.10.1", default-features = false }
getrandom = { version = "0.4.2", default-features = false, features = ["sys_rng"] }
# v0.3 W6 — thread-safe lazy init for the precomputed comb table.
# Per Q7.8: no_std-compatible runtime-init primitive. `spin` is the
# minimal-surface choice (no_std, zero deps, MIT, ~4 KB lib).
# Loaded with `once` feature only — we don't use the spinlock paths.
spin = { version = "0.10", default-features = false, features = ["once"] }

# dev-only — exempt from cargo-deny ban list
dudect-bencher = "0.7.0"
hex-literal = "1.1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
