[package]
name = "gmcrypto-c"
description = "C ABI for gmcrypto-core — cdylib + staticlib exposing SM2/SM3/SM4/HMAC/PBKDF2 to C / C++ / Python / Go / Zig callers via opaque handles"
keywords = ["sm2", "sm3", "sm4", "ffi", "c-abi"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# v0.4 W4 — the C ABI is a thin shim over gmcrypto-core. The FFI crate
# is `std`-OK (it's the language-binding layer, not the no_std crypto
# primitives). RNG is sourced via `getrandom::SysRng` internally
# per Q4.18; the C surface does not pass an RNG callback in v0.4.
gmcrypto-core = { path = "../gmcrypto-core", version = "0.11" }
getrandom.workspace = true
rand_core.workspace = true

[dev-dependencies]
hex-literal.workspace = true
# Needed only by the c_smoke integration test to construct a known
# SM2 scalar before round-tripping it through the FFI.
crypto-bigint.workspace = true

[build-dependencies]
# v0.4 W4 / Q4.12 — cbindgen is a build-time-only dep, gated on the
# `regen-header` feature. Default builds DO NOT run cbindgen; they
# use the committed `include/gmcrypto.h`. CI verifies the committed
# header matches a fresh cbindgen run via `git diff --exit-code`.
cbindgen = { version = "0.29", optional = true, default-features = false }

[features]
default = []
# Opt-in: regenerate `include/gmcrypto.h` via cbindgen on build.
# Default builds skip cbindgen entirely (saves ~5s per build and
# avoids the cbindgen dependency on every consumer's machine).
#
# v0.10: regen-header IMPLIES sm4-aead. cbindgen does not evaluate
# `#[cfg(feature)]` for free functions (so the AEAD prototypes appear
# unconditionally), BUT it *does* drop cfg-gated opaque struct types
# (and the functions referencing them) when the feature is inactive.
# The v0.10 streaming AEAD FFI adds such structs
# (gmcrypto_sm4_gcm_encryptor_t / _decryptor_t), so the header is only
# complete + deterministic when sm4-aead is active during regen. Tying
# it to regen-header keeps the documented `--features regen-header`
# command (and the CI drift gate) producing the full, stable header
# with no extra flags.
regen-header = ["dep:cbindgen", "sm4-aead"]
# v0.9 W4 — forward the core AEAD gate so the single-shot SM4-GCM /
# SM4-CCM FFI surface compiles. Streaming AEAD FFI is deferred to
# v0.10 (ABI-permanence risk before the Rust streaming API settles —
# see docs/v0.9-scope.md Q9.6). No new transitive deps: gmcrypto-core's
# sm4-aead pulls gmcrypto-simd::ghash, which is already in the tree.
sm4-aead = ["gmcrypto-core/sm4-aead"]

[lints.rust]
# v0.4 W4 / Q4.7 — `unsafe_code = "forbid"` is impossible on an FFI
# crate (slice reconstruction, `Box::from_raw`, `#[unsafe(no_mangle)]`
# all require `unsafe`). Every `unsafe` block in `src/lib.rs` carries
# a `// SAFETY:` comment naming the caller-side preconditions.
# gmcrypto-core itself stays `unsafe_code = "forbid"` workspace-wide.
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# FFI surfaces use many u8 pointers / size_t pairs; the lint
# generates noise without flagging real issues.
similar_names = "allow"
# v0.9 W4 — the single-shot AEAD entry points reconstruct several
# slices in one scope (key / nonce / aad / pt / ct / tag); short
# `k`/`n`/`a`/`p`/`c`/`t` bindings mirror the existing CBC entry
# points and keep the uniform reconstruct-delegate shape readable.
# Same rationale as `similar_names` above.
many_single_char_names = "allow"
# Pedantic/nursery lints that conflict with the FFI shim shape:
# every entry point follows the same null-check + slice-reconstruct
# + delegate + write_output pattern. Refactoring each `match` into
# `.map_or` or each `if let` into `let-else` would obscure the
# uniform shape without changing semantics.
option_if_let_else = "allow"
manual_let_else = "allow"
missing_const_for_fn = "allow"
unnecessary_box_returns = "allow"
# cbindgen recognizes byte-literal `CStr::from_bytes_with_nul`; the
# `c"..."` literal form is post-MSRV 1.85.
manual_c_str_literals = "allow"
# Long doc comments on the FFI module + per-entry-point bullets.
doc_markdown = "allow"
too_long_first_doc_paragraph = "allow"
