[package]
name = "gmcrypto-core"
description = "Constant-time-designed pure-Rust SM2/SM3 primitives (no_std + alloc) with an in-CI dudect timing-leak regression harness"
keywords = ["sm2", "sm3", "gm-crypto", "no-std", "constant-time"]
categories = ["cryptography", "no-std"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crypto-bigint.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand_core.workspace = true

[dev-dependencies]
hex-literal.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
dudect-bencher.workspace = true

[[bench]]
name = "timing_leaks"
path = "benches/timing_leaks.rs"
harness = false

[features]
default = []
std = []   # opt-in std feature; reserved for v0.3+ wire-format file I/O

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"     # we use sm2::Sm2Curve etc.
must_use_candidate = "allow"
