[package]
name = "gmcrypto-core"
description = "Constant-time-designed pure-Rust SM2/SM3 primitives (no_std + alloc) with an in-CI dudect timing-leak regression harness"
keywords = ["sm2", "sm3", "gm-crypto", "no-std", "constant-time"]
categories = ["cryptography", "no-std"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crypto-bigint.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand_core.workspace = true
spin.workspace = true
# v0.4 W2 — optional RustCrypto-trait fit. Default-features-off build
# does NOT pull these in. Pinned at major+minor per Q4.4
# (docs/v0.4-scope.md) — digest 0.10.x and cipher 0.4.x are the
# current stable lines; future major-bumps are a v0.5 candidate.
digest = { version = "0.10", default-features = false, features = ["mac"], optional = true }
cipher = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
hex-literal.workspace = true
getrandom.workspace = true
dudect-bencher.workspace = true

[[bench]]
name = "timing_leaks"
path = "benches/timing_leaks.rs"
harness = false

[[test]]
name = "rustcrypto_traits"
path = "tests/rustcrypto_traits.rs"
required-features = ["digest-traits", "cipher-traits"]

[features]
default = []
std = []   # opt-in std feature; reserved for v0.3+ wire-format file I/O
# v0.4 W2 — opt-in RustCrypto-trait fit. Two flags per Q4.3 so
# callers needing only one half don't pay for both. Default-features
# build is unchanged.
digest-traits = ["dep:digest"]
cipher-traits = ["dep:cipher"]
# v0.4 W3 — bitsliced (table-less, gate-only) SM4 S-box. Boyar-Peralta-
# style Itoh-Tsujii inversion in GF(2^8) plus two affine
# transformations. Default-off (Q4.9 in docs/v0.4-scope.md); callers
# opt in. Byte-identical output to the default linear-scan S-box;
# constant-time by construction (no table lookups, no branches on
# secret bits). Single-block only for v0.4; multi-block SIMD-packed
# bitslicing deferred to v0.5+ per Q4.11.
sm4-bitsliced = []

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"     # we use sm2::Sm2Curve etc.
must_use_candidate = "allow"
