[package]
name = "gmcrypto-core"
description = "Constant-time-designed pure-Rust SM2/SM3 primitives (no_std + alloc) with an in-CI dudect timing-leak regression harness"
keywords = ["sm2", "sm3", "gm-crypto", "no-std", "constant-time"]
categories = ["cryptography", "no-std"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# v0.4 — docs.rs builds with default features only by default. The
# v0.4 W2 / W3 opt-in features (`digest-traits` / `cipher-traits` /
# `sm4-bitsliced`) are the headline ergonomics work and need to
# appear on the rendered docs page. `all-features = true` is fine
# here: the three feature flags are additive and pulling all
# optional deps for docs.rs has no runtime impact.
[package.metadata.docs.rs]
all-features = true

[dependencies]
crypto-bigint.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand_core.workspace = true
spin.workspace = true
# v0.4 W2 — optional RustCrypto-trait fit. Default-features-off build
# does NOT pull these in. v0.11 migrated to digest 0.11 / cipher 0.5
# (the crypto-common 0.2 / hybrid-array generation; see
# docs/v0.11-scope.md). Default builds are unaffected.
digest = { version = "0.11", default-features = false, features = ["mac"], optional = true }
cipher = { version = "0.5", default-features = false, optional = true }
# v0.5 W4 phase 2 — sibling crate carrying the AVX2 8-way packed
# bitsliced SM4 S-box (and NEON in phase 3). Quarantines the
# unavoidable `unsafe` of SIMD intrinsics so `gmcrypto-core` itself
# can keep `unsafe_code = "forbid"`. Mirrors the established
# `gmcrypto-c` precedent for FFI primitives. Only pulled in when
# `sm4-bitsliced-simd` is enabled — default builds never touch it.
gmcrypto-simd = { path = "../gmcrypto-simd", version = "0.10", default-features = false, optional = true }

[dev-dependencies]
hex-literal.workspace = true
getrandom.workspace = true
dudect-bencher.workspace = true

[[bench]]
name = "timing_leaks"
path = "benches/timing_leaks.rs"
harness = false
# v0.5 W5 — the bench harness exercises `Sm2PrivateKey::from_scalar`
# (renamed from `new` in v0.5 W5), which is gated behind
# `crypto-bigint-scalar`. The bench is run with this feature enabled
# via the CI workflow's `cargo bench --bench timing_leaks --features
# crypto-bigint-scalar`. Local runs must do the same.
required-features = ["crypto-bigint-scalar"]

[[test]]
name = "rustcrypto_traits"
path = "tests/rustcrypto_traits.rs"
required-features = ["digest-traits", "cipher-traits"]

[features]
default = []
# v0.4 W2 — opt-in RustCrypto-trait fit. Two flags per Q4.3 so
# callers needing only one half don't pay for both. Default-features
# build is unchanged.
digest-traits = ["dep:digest"]
cipher-traits = ["dep:cipher"]
# v0.5 W5 (Q5.17) — opt-in `crypto_bigint::U256` constructor for
# `Sm2PrivateKey`. The always-on `Sm2PrivateKey::from_bytes_be(&[u8;
# 32])` is the recommended path for callers who don't want a
# transitive `crypto-bigint` major-version dep. Enabling this feature
# unlocks `Sm2PrivateKey::from_scalar(d: U256)` for callers already
# carrying `crypto-bigint`.
crypto-bigint-scalar = []
# NOTE — `std` feature flag removed in v0.5 W5 (Q5.18). It had been a
# no-op reservation since v0.3; a reserved flag without contents is
# worse than no flag (callers wondered what it did, docs had to
# explain "nothing yet"). If a future v0.5.x ships a file-I/O helper,
# it gets a specific feature name like `std-file-io`.
# v0.4 W3 — bitsliced (table-less, gate-only) SM4 S-box. Boyar-Peralta-
# style Itoh-Tsujii inversion in GF(2^8) plus two affine
# transformations. Default-off (Q4.9 in docs/v0.4-scope.md); callers
# opt in. Byte-identical output to the default linear-scan S-box;
# constant-time by construction (no table lookups, no branches on
# secret bits). Single-block only for v0.4; multi-block SIMD-packed
# bitslicing deferred to v0.5+ per Q4.11.
sm4-bitsliced = []
# v0.5 W4 — multi-block SIMD-packed bitsliced SM4 S-box. Stacks on
# `sm4-bitsliced`'s gate-only S-box circuit, packing 8 (AVX2) /
# 4 (NEON) blocks in parallel. Default-off (Q5.15 in
# docs/v0.5-scope.md).
#
# v0.5.0 ships **phase 1 scaffolding only**: enabling this feature
# in v0.5.0 transparently delegates to the v0.4 single-block
# bitslice — no SIMD intrinsics, no throughput win, byte-identical
# output. The W4 phase 2 (AVX2 8-way on `x86_64`) and phase 3
# (NEON 4-way on `aarch64` + `Sm4CbcDecryptor` SIMD fanout)
# intrinsic implementations are deferred to v0.5.x patch releases
# or v0.6 (see CHANGELOG.md `[0.5.0]` "Scope retrospective" for the
# rationale). The feature-flag name is stable across the rollout;
# callers enabling `sm4-bitsliced-simd` in v0.5.0 will transparently
# pick up the AVX2 / NEON fast paths when v0.5.x lands them, with
# no source change required.
# v0.5 W4 phase 2 — `sm4-bitsliced-simd` activates the
# `gmcrypto-simd` sibling crate. Phase 1 was a transparent
# delegate; phase 2 routes through the sibling's AVX2-or-scalar
# dispatch with runtime CPU detection via `cpufeatures`. See
# `crates/gmcrypto-core/src/sm4/sbox_bitsliced_simd.rs` for the
# in-tree wire-up and `docs/v0.5-scope.md` Q5.11 addendum for the
# architectural rationale.
sm4-bitsliced-simd = ["sm4-bitsliced", "dep:gmcrypto-simd"]
# v0.8 W2 / W3 — AEAD modes: SM4-GCM (mode_gcm) + SM4-CCM (mode_ccm)
# single-shot, per docs/v0.7-aead-scope.md. Default-off (additive;
# zero impact on the default-features build). Pulls in
# `gmcrypto-simd` for the GHASH primitive (v0.8 W1) — GHASH dispatches
# at runtime to CLMUL on x86_64 / PMULL on aarch64 / software fallback
# elsewhere. See the module docstrings on `sm4::mode_gcm` and
# `sm4::mode_ccm` for nonce-uniqueness and tag-length contracts.
sm4-aead = ["dep:gmcrypto-simd"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"     # we use sm2::Sm2Curve etc.
must_use_candidate = "allow"
